# ChangeLog for media-sound/abcde
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/abcde/ChangeLog,v 1.33 2007/08/30 01:44:49 beandog Exp $

  29 Aug 2007; Steve Dibb <beandog@gentoo.org> abcde-2.3.3-r1.ebuild,
  abcde-2.3.99.7_p235.ebuild:
  Remove cddb use flag, force rdep of cd-discid

*abcde-2.3.99.7_p235 (24 Jul 2007)

  24 Jul 2007; Steve Dibb <beandog@gentoo.org> +abcde-2.3.99.7_p235.ebuild:
  Version bump from Subversion, bug 171360

*abcde-2.3.3-r1 (13 Jul 2007)

  13 Jul 2007; Steve Dibb <beandog@gentoo.org> +abcde-2.3.3-r1.ebuild:
  Add support for use flags, bug 174725

  13 Jan 2007; Steve Dibb <beandog@gentoo.org> abcde-2.3.0.ebuild,
  abcde-2.3.3.ebuild:
  amd64 stable, bug 156420

  04 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> abcde-2.3.0.ebuild:
  Stable on sparc wrt #156420

  02 Dec 2006; Steve Dibb <beandog@gentoo.org>
  -files/abcde-2.0.3-gentoo.diff, -files/abcde-2.1.9-gentoo.diff,
  -files/abcde-2.2.0-gentoo.diff, -abcde-2.1.9.ebuild:
  Remove old version, old diffs

  01 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> abcde-2.3.0.ebuild:
  ppc stable, bug #156420

  01 Dec 2006; Markus Rothe <corsair@gentoo.org> abcde-2.3.0.ebuild:
  Stable on ppc64; bug #156420

  29 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> abcde-2.3.0.ebuild,
  abcde-2.3.3.ebuild:
  Rekeywording ~sparc which was dropped for no apparent reason

  28 Nov 2006; Christian Faulhammer <opfer@gentoo.org> abcde-2.3.0.ebuild:
  stable x86, bug #156420

  27 Nov 2006; Steve Dibb <beandog@gentoo.org> -abcde-2.0.3.ebuild,
  -abcde-2.1.15.ebuild, -abcde-2.2.0.ebuild:
  Remove old versions

*abcde-2.3.3 (12 Nov 2006)

  12 Nov 2006; Alexis Ballier <aballier@gentoo.org> +abcde-2.3.3.ebuild:
  Version bump, wrt to bug #139765

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove rphillips from metadata.xml as he's retired.

*abcde-2.3.0 (27 Aug 2005)
