@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/abcde
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/abcde/ChangeLog,v 1.33 2007/08/30 01:44:49 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/abcde/ChangeLog,v 1.34 2007/11/22 13:05:18 drac Exp $
+
+  22 Nov 2007; Samuli Suominen <drac@gentoo.org> abcde-2.3.99.7_p235.ebuild:
+  amd64 stable wrt #199977
 
   29 Aug 2007; Steve Dibb <beandog@gentoo.org> abcde-2.3.3-r1.ebuild,
   abcde-2.3.99.7_p235.ebuild:
